--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=lab
-server.port=9090
-spring.mvc.servlet.path=/mvc
+server.port=9091
+#spring.mvc.servlet.path=/mvc
+spring.mvc.hiddenmethod.filter.enabled=true
