added JPA entity mapping and replaced InMemory repositories with JPA Repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=lab
 server.port=9091
 #spring.mvc.servlet.path=/mvc
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.profiles.active=prod
